# RunningAroundCube

./: .gitignore  README.md  makefile  meson.build  running_around_cube
Test/AlgebraTest/: AlgebraTest.cpp  meson.build
Test/TemplateTest/: meson.build
include/Geometry/: shapes.h
include/LinearAlgebra/: lin_alg.h  physics.h
include/View/: drawer.h  main_view.h  shape_stash.h
src/: main.c
src/Geometry/: shapes.c
src/LinearAlgebra/: lin_alg.c  physics.c
src/View/: drawer.c  main_view.c
